--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/svelte": "^7.0.4",
     "@tailwindcss/vite": "^4.0.4",
+    "@vercel/analytics": "^1.5.0",
     "astro": "^5.2.5",
     "svelte": "^5.19.9",
     "tailwindcss": "^4.0.4",
