--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "class8b",
   "type": "module",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.4",
     "@vercel/analytics": "^1.5.0",
     "astro": "^5.2.5",
+    "jquery": "^3.7.1",
     "svelte": "^5.19.9",
     "tailwindcss": "^4.0.4",
     "typescript": "^5.7.3"
